tests/pass/03_empty_main.zn
u32 main() {
    return 0
}
