tests/fail/02_undeclared_function.zn
u32 main() {
    unknownFunc()
    return 0
}
